--- a/PROJECT/style.css
+++ b/PROJECT/style.css
@@ -40,7 +40,7 @@ nav .Ctrl {
 			stroke-dasharray: 917.35 917.35; stroke-dashoffset: 458.67;
 		}
 		#Ctrl_TimerDashboardNeedle {
-			position: absolute; top: 0; left: 0;
+			position: absolute; top: 0;
 			width: 100%; height: 100%;
 			display: flex; justify-content: center;
 		}
@@ -51,8 +51,8 @@ nav .Ctrl {
 			width: 40px; height: 80px;
 		}
 		.ScrollingNumber {
-			position: absolute; left: 0;
-			width: 100%; height: 100%;
+			position: absolute;
+			width: 100%;
 			transition: none !important;
 		}
 		#ScrollingNumber_Timer1 {
