--- a/PROJECT/style-HighContrast.css
+++ b/PROJECT/style-HighContrast.css
@@ -1,5 +1,8 @@
 /* For SamToki.github.io/Timer+Lottery */
-	/* This is a theme variant, so only colors along with few things are configured. */
+/* Released under GNU GPL v3 open source license. */
+/* (C) 2015-2023 SAM TOKI STUDIO */
+
+/* This is a theme variant, so only colors along with few things are configured. */
 
 /* Main */
 	/* Timer */
